<resources>
    <string name="app_name">Kontama Boutique</string>
    <string name="home">Home</string>
    <string name="discover">Discover</string>
    <string name="profile">Profile</string>
    <string name="cart">Cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="promotions">Promotions</string>
    <string name="new_arrivals">New Arrivals</string>
    <string name="what_are_you_looking_for">What you looking for?</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="password">Password</string>
    <string name="email">Email Or Phone</string>
    <string name="re_password">Re-Enter Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_your_details">Enter your details</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">or</string>
    <string name="sign_up">Sign Up</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other_name">Other Names</string>
    <string name="email_only">Email</string>
    <string name="phone">Phone Number</string>
    <string name="default_location">Default Location</string>
    <string name="who_do_we_deliver_to">Who do we deliver to?</string>
    <string name="delivery_contact">Delivery Contact</string>
    <string name="use_current_location">Use current location</string>
    <string name="delivery_city">Delivery City</string>
    <string name="delivery_address">DeLivery Address</string>
    <string name="confirm">Confirm</string>
    <string name="location">Location</string>
    <string name="change">Change</string>
    <string name="confirm_password_to_proceed">Confirm Password to proceed</string>
    <string name="back">Back</string>
    <string name="user_name">User Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="orders">Orders</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="ordered">Ordered</string>

    <string-array name="sub_categories">
        <item>Tops</item>
        <item>Bottoms</item>
        <item>Footwear</item>
        <item>Headwear</item>
        <item>Jewelry</item>
        <item>Accessories</item>
        <item>Top to Bottom</item>
        <item>Others</item>
    </string-array>
</resources>